syntax = "proto3";

option csharp_namespace = "Command";

package Price;

service Price {
	rpc GetPrice (PriceRequest) returns (stream  PriceData);
};

message PriceData {
	string symbol = 1;
	int64 time   = 2;
	double open  = 3;
	double high  = 4;
	double low   = 5;
	double Close = 6;
};

message PriceRequest {
	string symbol = 1;
	int64 start   = 2;
	int64 end     = 3;
};